structmeta-tests/tests/compile_fail/struct_meta/missing_unnamed_argument.rs
#[structmeta_tests::attr_required_unnamed2(10)]
fn my_func() {}

fn main() {}
