structmeta-tests/tests/compile_fail/struct_meta/missing_unnamed_argument.stderr
error: expected least 2 arguments but 1 argument was supplied
 --> $DIR/missing_unnamed_argument.rs:1:1
  |
1 | #[structmeta_tests::attr_required_unnamed2(10)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `structmeta_tests::attr_required_unnamed2` (in Nightly builds, run with -Z macro-backtrace for more info)
